# tensorrt

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: mdbook-theme.md  mdbook-update.md
book/: book.toml  custom.css
book/src/: README.md  SUMMARY.md
book/src/benchmark/: batch-sweep.md  comparison.md  methodology.md  metrics.md  param-sweep.md  practical-decisions.md  precision-sweep.md  results.md
book/src/concepts/: architecture.md  history.md  inference-engines.md  precision.md  principles.md  trtexec-vs-api.md
book/src/setup/: dependencies.md  paths.md
book/src/workflow/: build-params.md  dynamic-batch.md  engine-build.md  onnx-export.md  preprocessing.md
code/notebooks/: 01_check_env.ipynb  02_single_engine.ipynb  03_benchmark.ipynb  04_engine_inspector.ipynb  05_param_sweep.ipynb  06_batch_sweep.ipynb  07_precision_sweep.ipynb  08_final_comparison.ipynb
code/src/: env.py
